<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/registerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_subtitle"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/full_name"
        android:drawableLeft="@drawable/account_box"
        android:drawablePadding="16dp"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintTop_toBottomOf="@id/registerSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="name|username"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:id="@+id/citizenshipIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/citizenship_id"
        android:drawableLeft="@drawable/credit_card"
        android:drawablePadding="16dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="16dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/citizenshipIdEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/eligibleCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/eligible_title"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eligibleCheckbox"
        android:layout_margin="16dp"
        android:drawableEnd="@drawable/arrow_forward"
        />

    <Button
        android:id="@+id/loginSubtitle1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>