<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/loginSubtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        />
    <EditText
        android:id="@+id/emailEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/loginSubtitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/passwordEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText1"
        android:layout_margin="16dp"
        android:drawableEnd="@drawable/arrow_forward"
        />

    <Button
        android:id="@+id/registerSubtitle1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_subtitle1"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>