<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey6"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/waitTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="32dp"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <include
        android:id="@+id/votedCandidateLayout"
        layout="@layout/voted_candidate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:visibility="gone"
        />

    <include
        android:id="@+id/voteCandidateLayout"
        layout="@layout/vote_candidate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/electionStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/election_status"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/arrow_forward"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>